--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="Titre">
+        <h2>MON Premier TP sur Github</h2>
+    </section>
     
 </body>
 </html>
