mise en place de la section description

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="description">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat architecto consequatur unde numquam
+             commodi
+             repudiandae magni debitis labore! Iure illum, quidem est
+             pariatur et dolorum commodi quam minima voluptatum dignissimos?</p>
+    </section>
     
 </body>
 </html>
