mise en place de la section formations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="formations">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, magni itaque eum voluptatem unde maxime
+             sequi doloribus aliquid laudantium. Porro, laboriosam id. Optio voluptates nisi recusandae ipsam iure amet.
+              Nemo!
+        
+        </p>
+    </section>
     
 </body>
 </html>
