mise en place de la section competences

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="competences">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad, quia voluptatem necessitatibus dicta illo deserunt? Delectus ipsa vel, deleniti assumenda ipsam nam molestiae provident error dolore, maxime ullam cum maiores!</p>
+    </section>
     
 </body>
 </html>
