mise en place se la section associations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="associations">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A officiis natus nisi corporis optio cupiditate excepturi possimus odio illo. Ex in necessitatibus fugiat eaque natus possimus amet fugit reiciendis harum.</p>
+    </section>
     
 </body>
 </html>
